--- a/app/src/main/res/layout/arr.xml
+++ b/app/src/main/res/layout/arr.xml
@@ -15,7 +15,7 @@
         android:textStyle="bold"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
-        android:textColor="@color/text_winered"
+        android:textColor="?attr/textColorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="start" />
@@ -24,7 +24,7 @@
         android:id="@+id/arr_namn"
         android:text="Palatset @ Hos #15"
         android:textStyle="bold"
-        android:textColor="@color/text_winered"
+        android:textColor="?attr/textColorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/arr_datum"
@@ -44,9 +44,7 @@
         android:textStyle="italic"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/arr_deltagare"
-
-        />
+        android:layout_below="@id/arr_deltagare" />
 
     <View
         android:layout_height="1dp"
