--- a/app/src/main/res/layout/entry.xml
+++ b/app/src/main/res/layout/entry.xml
@@ -16,7 +16,7 @@
         android:paddingTop="2dip"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/text_winered"
+        android:textColor="?attr/textColorPrimary"
         android:textStyle="bold" />
 
     <TextView
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/entry"
-        android:textColor="@color/text_winered"
+        android:textColor="?attr/textColorPrimary"
         android:textStyle="italic" />
 
     <GridLayout
