--- a/app/src/main/res/layout/fragment_arr.xml
+++ b/app/src/main/res/layout/fragment_arr.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/background">
+    android:background="?attr/background">
 
     <Button
         android:id="@+id/add_arr"
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="@color/text_winered"
+            android:textColor="?attr/textColorPrimary"
             android:gravity="center_horizontal" />
 
         <LinearLayout
