--- a/app/src/main/res/layout/popup_new_arr.xml
+++ b/app/src/main/res/layout/popup_new_arr.xml
@@ -48,6 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/arr_popup_datepicker"
+        android:datePickerMode="spinner"
         android:firstDayOfWeek="2"
         android:calendarViewShown="false"
         android:spinnersShown="true"
@@ -56,6 +57,7 @@
     <TimePicker
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:timePickerMode="spinner"
         android:id="@+id/arr_popup_timepicker"
         android:layout_below="@+id/arr_popup_datepicker"
         />
