--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="cl.sidan.appen.MainActivity"
-    android:theme="@style/AppTheme" >
+    android:theme="@style/DefaultTheme" >
 
     <item android:id="@+id/logout"
         android:title="@string/menu_log_out"
