--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,20 +1,40 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="DefaultTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimaryPink</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorPrimaryPink</item>
+        <item name="colorPrimary">@color/colorPink</item>
+        <item name="colorPrimaryDark">@color/colorBlueDark</item>
+        <item name="textColorPrimary">@color/colorPink</item>
+        <item name="textColorSecondary">@color/colorYellowLight</item>
+        <item name="colorAccent">@color/colorPink</item>
+        <item name="background">@color/colorYellowLight</item>
+        <item name="textAppearanceListItem">@color/colorPink</item>
+
+        <item name="android:statusBarColor">@color/colorPink</item>
+        <item name="android:navigationBarColor">@color/colorPink</item>
     </style>
 
-    <style name="AppTheme.NoActionBar">
+    <style name="DefaultTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="DefaultTheme.AppBarOverlay">
+        <item name="android:textColorPrimary">@color/colorYellowLight</item>
+        <item name="android:textColorSecondary">@color/colorYellowLight</item>
+    </style>
+    <style name="DefaultTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="NightTheme">
+        <item name="colorPrimaryDark">@color/colorBlueDark</item>
+        <item name="colorAccent">@color/colorPink</item>
+    </style>
+
+    <style name="NightTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
 
     <style name="DrawerTheme" parent="Theme.AppCompat.Light" />
 </resources>
