--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,10 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+
     <gradient
-        android:startColor="#FF4081"
-        android:centerColor="#C03057"
-        android:endColor="#A02447"
+        android:startColor="?attr/colorPrimaryDark"
+        android:endColor="?attr/colorPrimary"
         android:type="linear"
-        android:angle="135"/>
+        android:angle="135" />
 </shape>
