--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,6 @@
     tools:openDrawer="start">
 
     <android.support.design.widget.CoordinatorLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity"
@@ -21,7 +18,7 @@
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/DefaultTheme.AppBarOverlay">
+            android:theme="?actionBarPopupTheme">
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
@@ -29,7 +26,7 @@
                     android:layout_height="?attr/actionBarSize"
                     android:background="?attr/colorPrimary"
                     app:layout_scrollFlags="scroll|enterAlways"
-                    app:popupTheme="@style/DefaultTheme.PopupOverlay" />
+                    app:popupTheme="?popupTheme" />
 
         </android.support.design.widget.AppBarLayout>
 
@@ -49,10 +46,12 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@drawable/background"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer" />
+        app:menu="@menu/activity_main_drawer"
+        style="?navigationDrawerTheme"
+        android:theme="?navigationDrawerTheme"
+        android:background="?background"/>
 
     <FrameLayout
         android:id="@+id/right_drawer"
@@ -61,7 +60,6 @@
         android:layout_gravity="end"
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"
-        android:background="#111" />
+        android:dividerHeight="0dp" />
 
 </android.support.v4.widget.DrawerLayout>
