--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,20 +7,23 @@
     android:background="?attr/background">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sök sträng"
+            android:layout_marginEnd="10dp"
+            android:text="Söksträng:"
             />
 
         <EditText
             android:id="@+id/search_string"
-            android:layout_width="250dp"
-            android:layout_height="50dp" />
+            android:layout_width="match_parent"
+            android:layout_height="30dp" />
     </LinearLayout>
 
     <Button
