--- a/app/src/main/res/layout/entry.xml
+++ b/app/src/main/res/layout/entry.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:longClickable="true"
@@ -9,7 +10,6 @@
     android:paddingLeft="2dp"
     android:paddingRight="2dp"
     android:background="@drawable/background">
-
 
     <TextView
         android:id="@+id/entry"
