--- a/app/src/main/res/menu/menu_arr.xml
+++ b/app/src/main/res/menu/menu_arr.xml
@@ -23,4 +23,8 @@
     <item android:id="@+id/edit_arr"
         android:title="@string/andra"
         android:enabled="true" />
+
+    <item android:id="@+id/delete_arr"
+        android:title="@string/ta_bort"
+        android:enabled="true" />
 </menu>
